test_programs/compile_failure/noirc_frontend_tests_cannot_return_vector_from_main/src/main.nr

    fn main() -> pub [Field]{
        &[1,2]
        
    }
    